<?xml version="1.0"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacgkroudn"
    android:gravity="center">

    <ImageButton
        android:id="@+id/changeCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/change_city_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/change_city_symbol_small" />


    <TextView
        android:id="@+id/airQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/temptext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/Humdity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="start"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/tempView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"

        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/weatherSymbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/winds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_Img"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageView
        android:id="@+id/weatherSymbol"
        android:layout_width="109dp"
        android:layout_height="106dp"
        android:contentDescription="@string/weather_description"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/cloudy2" />

    <TextView
        android:id="@+id/locationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="monospace"
        android:text="@string/city_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherSymbol"
        app:layout_constraintVertical_bias="0.06999999" />

    <TextView
        android:id="@+id/temptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/temperature_text"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tempView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/updating"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/weatherSymbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/press_Img"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/t_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="casual"
        android:text="@string/t_dateText"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/scnd_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="casual"
        android:text="@string/t_dateText"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trd_date"
        app:layout_constraintStart_toEndOf="@+id/t_date"
        app:layout_constraintTop_toBottomOf="@+id/winds"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/trd_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:text="@string/t_dateText"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Humdity"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tday_Des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/updating"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_date"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/trd_Des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/updating"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trd_date"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/scnd_Des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updating"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trd_Des"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/tday_Des"
        app:layout_constraintTop_toBottomOf="@+id/scnd_date"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/t_dayTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:fontFamily="monospace"
        android:text="@string/temperature"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tday_Des"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/trd_dayTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="monospace"
        android:text="@string/temperature"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trd_Des"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/scnd_dayTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trd_dayTemp"
        app:layout_constraintStart_toEndOf="@+id/t_dayTemp"
        app:layout_constraintTop_toBottomOf="@+id/scnd_Des"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageView
        android:id="@+id/press_Img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wind_Img"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationView"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/pressure" />

    <ImageView
        android:id="@+id/wind_Img"
        android:layout_width="63dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationView"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/windyy" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="69dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationView"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/humidity" />

    <ImageView
        android:id="@+id/t_imageView"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tday_Des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_date"
        app:srcCompat="@drawable/cloudy2" />

    <ImageView
        android:id="@+id/twoDay_Imageview"
        android:layout_width="65dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/scnd_Des"
        app:layout_constraintEnd_toStartOf="@+id/threeDay_Imageview"
        app:layout_constraintStart_toEndOf="@+id/t_imageView"
        app:layout_constraintTop_toBottomOf="@+id/scnd_date"
        app:srcCompat="@drawable/fog" />

    <ImageView
        android:id="@+id/threeDay_Imageview"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/trd_Des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trd_date"
        app:srcCompat="@drawable/tstorm1" />


</androidx.constraintlayout.widget.ConstraintLayout>